--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero Sectionn -->
   <section class="hero">
     <div class="slogan">
       <h2>Compre e venda com facilidade</h2>
