Começando os trabalhos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OLX PUC</title>
-  <link rel="stylesheet" href="Assets/css/styles.css" />
+  <link rel="icon" href="/public/assets/img/pucicone.png">
+  <link rel="stylesheet" href="public/Assets-Homepage/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
@@ -78,6 +79,6 @@
     </div>
   </footer>
 
-  <script src="Assets/js/app.js"></script>
+  <script src="public/Assets-Homepage/js/app.js"></script>
 </body>
 </html>
