bebi pra carai e deu nisso, malz se o odigo tiver uma bagunca mas a home page fiocu boa pra carai

--- a/index.html
+++ b/index.html
@@ -26,26 +26,29 @@
     <a href="#">Notificações</a>
     <div class="icons">
       <button><i class="fas fa-shopping-cart"></i> Carrinho</button>
-      <button><i class="fas fa-user-circle"></i> Perfil</button>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="slogan">
-      <h2>Compre e venda com facilidade</h2>
-      <p>Plataforma exclusiva para alunos da PUC Minas</p>
-      <button class="btn">Anunciar agora</button>
+  <!-- Hero Section -->
+<section class="hero">
+  <div class="slogan">
+    <h2>Compre e venda com facilidade</h2>
+    <p>Plataforma exclusiva para alunos da PUC Minas</p>
+    <button class="btn">Anunciar agora</button>
+  </div>
+  <div class="carousel">
+    <div class="carousel-container">
+      <img src="https://ih1.redbubble.net/image.5173873617.6193/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" class="carousel-image" />
+      <img src="https://ih1.redbubble.net/image.5173873617.6193/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" class="carousel-image" />
+      <img src="https://ih1.redbubble.net/image.5173873617.6193/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" class="carousel-image" />
     </div>
-    <div class="carousel">
-      <button class="arrow">&#10094;</button>
-      <div class="carousel-container">
-        <img src="https://via.placeholder.com/300x180?text=Promo+1" class="carousel-image" />
-        <img src="https://via.placeholder.com/300x180?text=Promo+2" class="carousel-image" />
-        <img src="https://via.placeholder.com/300x180?text=Promo+3" class="carousel-image" />
-      </div>
-      <button class="arrow">&#10095;</button>
-    </div>
+    <button class="arrow" id="prev">&#10094;</button>
+    <button class="arrow" id="next">&#10095;</button>
+  </div>
+</section>
+
+    
   </section>
 
   <!-- Filtros -->
