--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OLX PUC</title>
   <link rel="icon" href="/public/assets/img/pucicone.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="public/assetscadastro/css/cadastro.css">
   <link rel="stylesheet" href="public/Assets-Homepage/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
@@ -35,7 +38,7 @@
   <div class="slogan">
     <h2>Compre e venda com facilidade</h2>
     <p>Plataforma exclusiva para alunos da PUC Minas</p>
-    <button class="btn">Anunciar agora</button>
+    <a href="cadastro.html"><button class="btn">Anunciar agora</button></a>
   </div>
   <div class="carousel">
     <div class="carousel-container">
@@ -71,14 +74,21 @@
   </div>
 
   <!-- Rodapé -->
-  <footer>
-    <div class="footer-logo">OLX PUC</div>
-    <p>© 2025 OLX PUC. Todos os direitos reservados.</p>
-    <p>Projeto acadêmico sem fins lucrativos.</p>
-    <div class="social">
-      <i class="fab fa-linkedin"></i>
-      <i class="fab fa-instagram"></i>
-      <i class="fab fa-facebook"></i>
+  <footer class="bg-dark text-light text-center p-4">
+    <div class="container-fluid">
+      <a class="navbar-brand logo-circle d-flex align-items-center justify-content-center" href="#">
+        <img src="public/assetscadastro/img/logo.png" class="rounded-circle" alt="Logo" width="60" height="60">
+      </a> 
+      <break>‎</break>
+      <p class="mb-1">© 2025 OLX PUC. Todos os direitos reservados.</p>
+      <p class="mb-2 small">
+        OLX PUC é uma plataforma digital independente dedicada à compra, venda e troca de produtos e serviços entre membros da comunidade acadêmica. É proibida a reprodução, distribuição ou qualquer uso não autorizado do conteúdo deste site sem consentimento prévio por escrito.
+      </p>
+      <div class="d-flex justify-content-center gap-3">
+        <a href="#"><i class="bi bi-linkedin text-white fs-4"></i></a>
+        <a href="#"><i class="bi bi-instagram text-white fs-4"></i></a>
+        <a href="#"><i class="bi bi-facebook text-white fs-4"></i></a>
+      </div>
     </div>
   </footer>
 
