Arquivos do carrinho indentação

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="#">Meus Anúncios</a>
     <a href="#">Notificações</a>
     <div class="icons">
-      <button><i class="fas fa-shopping-cart"></i> Carrinho</button>
+      <a href="public/carrinho.html"><button><i class="fas fa-shopping-cart" ></i> Carrinho</button></a>
     </div>
   </nav>
 
