--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="logo">OLX PUC</div>
     <input type="text" placeholder="Buscar anúncio..." class="search"/>
     <div class="auth-buttons">
-      <button class="btn login">Login</button>
-      <button class="btn subscribe">Cadastrar</button>
+      <a href= "Login.html" class="btn login">Login</a>
+      <a href="cadastro_usuario.html" class="btn subscribe">Cadastrar</a>
     </div>
   </header>
 
