so arrumei o botao de login na pagin do davisao

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,9 +15,9 @@
   <header class="topbar">
     <div class="logo">OLX PUC</div>
     <input type="text" placeholder="Buscar anúncio..." class="search"/>
-    <div class="auth-buttons">
-      <button class="btn login">Login</button>
-      <button class="btn subscribe">Cadastrar</button>
+     <div class="auth-buttons">
+      <a href= "Login.html" class="btn login">Login</a>
+      <a href="cadastro_usuario.html" class="btn subscribe">Cadastrar</a>
     </div>
   </header>
 
