adição da tela de detalhes do produto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <a class="navbar-brand logo-circle d-flex align-items-center justify-content-center" href="#">
         <img src="public/assetscadastro/img/logo.png" class="rounded-circle" alt="Logo" width="60" height="60">
       </a> 
-      <break>‎</break>
+      <break></break>
       <p class="mb-1">© 2025 OLX PUC. Todos os direitos reservados.</p>
       <p class="mb-2 small">
         OLX PUC é uma plataforma digital independente dedicada à compra, venda e troca de produtos e serviços entre membros da comunidade acadêmica. É proibida a reprodução, distribuição ou qualquer uso não autorizado do conteúdo deste site sem consentimento prévio por escrito.
