--- a/detalhes.html
+++ b/detalhes.html
@@ -25,7 +25,7 @@
 
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#">Meus Anúncios</a>
     <a href="#">Notificações</a>
     <div class="icons">
